Bug 1191207 - cancel chrome checking